--- a/static/css/view_book.css
+++ b/static/css/view_book.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
 }
+
 .container {
     max-width: 800px;
     margin: 50px auto;
@@ -12,20 +13,25 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 h1 {
     text-align: center;
     color: #333;
 }
+
 table {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
 }
-th, td {
+
+th,
+td {
     padding: 10px;
     text-align: left;
     border-bottom: 1px solid #ddd;
 }
+
 th {
     background-color: #f2f2f2;
 }
@@ -33,7 +39,11 @@ th {
 /* Responsive styles */
 @media screen and (max-width: 600px) {
     .container {
-        width: 90%;
-        margin: 20px auto;
+        width: 90%; /* Adjusted to make container responsive */
+        margin: 20px auto; /* Adjusted to center container */
+    }
+
+    table {
+        font-size: 12px; /* Adjusted font size for smaller screens */
     }
 }
