--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href='../static/css/login.css'>
+    <link rel="stylesheet" href="../static/css/login.css">
 </head>
 <body>
     <div class="container">
@@ -16,6 +16,8 @@
             <button type="submit">Login</button>
         </form>
         <p>Don't have an account? <a href="{{ url_for('register') }}">Register</a></p>
+        <p>Forgot your password? <a href="{{ url_for('forgot_password') }}">Reset it here</a></p>
+
     </div>
 </body>
 </html>
