book section has been updated

--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -64,14 +64,13 @@
           /><br />
           <label for="category_name">Category:</label>
           <select id="category_name" name="category_name" required>
-            <option value="" disabled selected>Select Category</option>
+            <option >Select Category</option>
             <option value="Fiction">Fiction</option>
             <option value="Non-fiction">Non-fiction</option>
             <option value="Science Fiction">Science Fiction</option>
-            <option value="Science Fiction">Motivational</option>
-            <option value="Science Fiction">Story</option>
-            <!-- Add more options as needed --></select
-          ><br />
+            <option value="Motivational">Motivational</option>
+            <option value="Story">Story</option>
+            </select><br />
           <button type="submit">Add Book</button>
         </form>
       </div>
